# bbat

./: Cargo.toml  README.md  fundsp_arch_note.d2
.cargo/: config.toml
bbat/: bbat.db
bbat/src/: app_macro.rs  lib.rs
bbat/src/commands/: user_command.rs
bbat/src/model/: product.rs
bbat/src/repository/: user_repository.rs
design-pattern/: Cargo.toml  README.md
design-pattern/src/: behavioural.rs  factory_method_blacksmith.rs  factory_method_dialog.rs  lib.rs
design-pattern/src/behavioural/: chain_of_responsibility.rs
design-pattern/src/creational/: builder.rs
design-pattern/src/factory_method_blacksmith/: blacksmith.rs  elf_blacksmith.rs  orch_blacksmith.rs
design-pattern/src/factory_method_dialog/: gui.rs  html_gui.rs  initialization.rs  windows_gui.rs
design-pattern/src/factory_method_maze/: game.rs  magic_maze.rs  ordinary_maze.rs
dongfeng/: .env  Cargo.toml  README.md  diesel.toml  dongfeng.db  run_migration.py
dongfeng/migrations/2025-02-01-042917_add_dregs_is_it_worked/: down.sql
dongfeng/migrations/2025-02-21-225816_product/: down.sql  up.sql
dongfeng/migrations/2025-02-21-225816_user/: up.sql
dongfeng/src/: lib.rs  models.rs  query.rs  schema.rs  user_schema.rs
dongfeng/src/models/: posts.rs  product.rs  user.rs
dongfeng/src/repository/: product_repository.rs
filter/: Cargo.toml
filter/src/: denominator.rs  direct_canonical.rs  lib.rs  numerator.rs  transfer_function.rs  vec_deque.rs
firebird_explore/: Cargo.toml  firebird-test.fdb
ratatui/: Cargo.toml
ratatui/src/: app.rs
rustlings/exercises/04_primitive_types/: primitive_types3.rs
rustlings/exercises/05_vecs/: vecs1.rs
rustlings/exercises/07_structs/: structs1.rs
rustlings/exercises/quizzes/: quiz1.rs
simple_migrator/: Cargo.toml  firebird-test.fdb  firebird_note.md  justfile
simple_migrator/sm_macro/: Cargo.toml  justfile
simple_migrator/sm_macro/src/: from_row.rs  get_fields.rs  lib.rs
simple_migrator/sm_macro/tests/: test.rs
simple_migrator/sm_macro/tests/expands/: test_get_fields.expanded.rs  test_get_fields.rs
simple_migrator/sqls/: 0_create_price_table.sql  1_create_user_table.sql  2_create_customer_table.sql  3_create_record_table.sql  4_create_payment_table.sql  5_create_balance_table.sql  6_create_customer_balance_table.sql  meta_delete_migration_status.sql  meta_ensure_migration_table.sql  meta_get_applied_migration_status.sql  meta_upsert_migration_status.sql
simple_migrator/src/: executor.rs  from_rows.rs  lib.rs  migrations.rs  models.rs  platforms.rs  runner.rs  runner_builder.rs
simple_migrator/src/models/: migration_status.rs
src/: app.rs  lib.rs  main.rs  model.rs
src/app_macro/: utility_macro.rs
src/model/: user.rs
src/repository/: user_repository.rs
stm32-usb/: Cargo.toml
stm32-usb/.cargo/: config.toml
stm32-usb/src/: main.rs
tui/: Cargo.toml  README.md
tui/src/: main.rs
