[package]
name = "dongfeng"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
diesel = { version = "2.2.0", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
  "chrono",
] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
sea-query = { version = "0.32.1", features = ["backend-sqlite", "with-json"] }
