[package]
name = "simple_migrator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
once_cell = "1.21.4"
rsfbclient = { version = "0.26.0", features = [
  "native_client",
  "dynamic_loading",
  "linking",
] }
serde = { version = "1.0.228", feature = ["derive"] }

simple_migrator_macro = { path = "./sm_macro" }
